# RTL-Bug-Detection-LLM-Experiments

./: .gitignore  README.md  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
rtl_bug_detection_llm_experiments/: __init__.py  assess_bug_report_contents.py  llm.py  main.py  normalize_hack_the_silicon_bug_branches.py  verilog_spec.py  yosys_equivalence_check.py
rtl_bug_detection_llm_experiments/llm_bug_detection/: __init__.py  analyze_llm_bug_detection_data.py  collect_llm_bug_detection_data.py
rtl_bug_detection_llm_experiments/obfuscate/: __init__.py  obfuscate_verilog_by_llm_signal_rename.py  shuffle_rtl_3.py
scripts/: merge_all_hackatdac21_branches.sh
src/: llm.py  llm_bug_scanner.py  normalize_hack_the_silicon_bug_branches.py
test/: __init__.py  test_obfuscate_renaming.py  test_yosys_equivalence_check.py
test/test_assess_bug_report_contents/: __init__.py  test_assess_bug_report_contents_score.py  test_extract_markdown_code_blocks.py  test_get_str_diff_chunks.py
test/test_samples/: equivalence_check_1_gate.sv  equivalence_check_1_gate_internal_rename.sv  equivalence_check_1_gold.sv  equivalence_check_1_gold_different.sv
