[project]
name = "rtl-bug-detection-llm-experiments"
version = "0.1.0"
description = "Experiments related to hardware/RTL bug detection, using LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.21.0",
    "gitpython>=3.1.45",
    "loguru>=0.7.3",
    "openai>=1.99.7",
    "polars>=1.32.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
select = ["ALL"]
ignore = [
    "S311", # Allow random library.
    "BLE001", # Allow bare except.
    "TRY301",
    "S101",
]
