[project]
name = "rtl-bug-detection-llm-experiments"
version = "0.1.0"
description = "Experiments related to hardware/RTL bug detection, using LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.21.0",
    "fire>=0.7.1",
    "gitpython>=3.1.45",
    "loguru>=0.7.3",
    "openai>=1.99.7",
    "orjson>=3.11.3",
    "polars>=1.32.2",
    "python-dotenv>=1.1.1",
    "typed-argparse>=0.3.1",
    "uuid-extension",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = [
    "S311", # Allow random library.
    "BLE001", # Allow bare except.
    "TRY301",
    "S101",
    "COM812",
    "PLR0915",
    "TD",
    "FIX"
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["D103"]
